--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@discordjs/builders": "^1.11.2",
     "@discordjs/rest": "^2.5.0",
     "@discordjs/voice": "^0.18.0",
     "discord-api-types": "^0.38.9",
     "discord.js": "^14.19.3",
+    "dotenv": "^16.5.0",
     "play-dl": "^1.9.7",
     "yt-search": "^2.13.1"
   },
